[Jason]added the configuration of swagger ui

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ management:
 
 spring:
   jersey:
-    application-path: /
+    application-path: /api/gaia
   datasource:
     url: jdbc:mysql://localhost/gaia
     username: root
